fix text-align center

--- a/src/app/completa-il-verso/completa-il-verso.component.scss
+++ b/src/app/completa-il-verso/completa-il-verso.component.scss
@@ -14,7 +14,7 @@
         align-items: center;
 
         .domanda {
-            text-align: center;
+            text-align: -webkit-center;
             width: 100%;
 
             h2 {
