--- a/src/app/four-images-one-word/four-images-one-word.component.scss
+++ b/src/app/four-images-one-word/four-images-one-word.component.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
 
     .title {
-        text-align: center;
+        text-align: -webkit-center;
         margin-top: 50px;
 
         h2 {
