--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -7,7 +7,7 @@
     height: 130px;
     z-index: 10000000;
     color: #171717;
-    text-align: center;
+    text-align: -webkit-center;
     font-size: 50px;
     font-weight: 900;
     border: none;
