--- a/src/app/lista-giochi/lista-giochi.component.scss
+++ b/src/app/lista-giochi/lista-giochi.component.scss
@@ -10,7 +10,7 @@
     h1 {
         width: 100%;
         height: min-content;
-        text-align: center;
+        text-align: -webkit-center;
         font-size: 50px;
         font-weight: 900;
         margin: 30px 0 0;
